--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
 
   <!-- BACKGROUND SLIDESHOW -->
   <div class="slideshow">
-    <img src="slide1.jpg" class="slide active">
-    <img src="slide2.jpg" class="slide">
-    <img src="slide3.jpg" class="slide">
-    <img src="slide4.jpg" class="slide">
+    <img src="slide1.jpg.jpeg" class="slide active">
+    <img src="slide2.jpg.jpeg" class="slide">
+    <img src="slide3.jpg.jpeg" class="slide">
+    <img src="slide4.jpg.jpeg" class="slide">
+    <img src="slide5.jpg.jpeg" class="slide">
+    <img src="slide6.jpg.jpeg" class="slide">
+    <img src="slide7.jpg.jpeg" class="slide">
+    <img src="slide8.jpg.jpeg" class="slide">
+    <img src="slide9.jpg.jpeg" class="slide">
+    <img src="slide10.jpg.jpeg" class="slide">
+  </div>
+
   </div>
 
   <div class="container">
